@@ -48,13 +48,14 @@ end
 -- Diagnose any failed expectations in situ, and return failure messages
 -- for display at the end.
 local function expectations (status, descriptions)
-  local spaces = indent (descriptions)
+  local spaces  = indent (descriptions)
   local reports = { fail = "", pend = "" }
+  local counts  = { fail = 0, pend = 0, unexpected = 0 }
 
   if next (status.expectations) then
-    -- If we have expectations, display the result of each.
-    spec (descriptions)
+    local details = ""
 
+    -- If we have expectations, display the result of each.
     for i, expectation in ipairs (status.expectations) do
       if expectation.pending ~= nil then
         local pend = "  " .. color.pend ..
@@ -62,30 +63,59 @@ local function expectations (status, descriptions)
         if type (expectation.pending) == "string" then
           pend = pend .. color.warn .. expectation.pending .. ", "
         end
-	if expectation.status == true then
+        if expectation.status == true then
+	  counts.unexpected = counts.unexpected + 1
+
+	  if prefix ~= color.fail then prefix = color.warn end
+
           pend = pend .. color.warn .. "passed unexpectedly!%{reset}"
           reports.pend = reports.pend .. "\n" .. pend .. "\n" ..
-	      "  " .. color.strong ..
-	      "You can safely remove the 'pending ()' call from this example.%{reset}"
+              "  " .. color.strong ..
+              "You can safely remove the 'pending ()' call from this example.%{reset}"
         else
+	  counts.pend = counts.pend + 1
+
           pend = pend .. "not yet implemented"
           reports.pend = reports.pend .. "\n" .. pend
-	end
+        end
 
         if opts.verbose then
-          princ (spaces .. pend)
+          details = details .. "\n" .. spaces .. pend
         end
 
       elseif expectation.status == false then
+	counts.fail = counts.fail + 1
+
         local fail = "  " .. color.fail .. "FAILED expectation " ..
                      i .. "%{reset}: " ..  expectation.message
         reports.fail = reports.fail .. "\n" .. fail:gsub ("\n", "%0  ")
 
         if opts.verbose then
-          princ (spaces .. fail:gsub ("\n", "%0  " .. spaces))
+          details = details .. "\n" .. spaces .. fail:gsub ("\n", "%0  " .. spaces)
         end
       end
     end
+
+    -- One line summary of abnormal expectations, for non-verbose report format.
+    if not opts.verbose then
+      details = {}
+      if counts.pend > 0 then
+	table.insert (details, color.pend .. tostring (counts.pend) .. " pending")
+      end
+      if counts.unexpected > 0 then
+	table.insert (details, color.warn .. tostring (counts.unexpected) .. " unexpectedly passing")
+      end
+      if counts.fail > 0 then
+	table.insert (details, color.fail .. tostring (counts.fail) .. " failing")
+      end
+      if next (details) then
+	details = " (" .. table.concat (details, "%{reset}, ") .. "%{reset})"
+      else
+	details = ""
+      end
+    end
+
+    princ (spaces .. tabulate (descriptions) ..details)
 
   elseif status.ispending then
     -- Otherwise, display only pending examples.
